package unsw.dungeon;

/**
 * @author Ping GAO
 */
public class BoulderGoal implements Goal {
    /**
     * @return dummy class make sure program don't break
     */
    @Override
    public boolean evaluate() {
        return true;
    }
}
