package unsw.dungeon;

/**
 * @author Ping GAO
 */
public class GetBombedNoEffect implements GetBombedBehavior {
	@Override
	public void getBombed() {
	}

}
