package unsw.dungeon;

/**
 * @author Ping GAO
 */
public interface Goal {

    boolean evaluate();
}
