package unsw.dungeon;

/**
 * @author Ping GAO
 */
public class Pair {
    int x, y;

    /**
     * @param x x
     * @param y y
     *          this is use to represent a pair use in path finding
     */
    public Pair(int x, int y) {
        this.x = x;
        this.y = y;
    }
}
