package unsw.dungeon;

/**
 * @author Ping GAO
 */
public interface PickUpBehavior {
	void pickUp();
}
