package unsw.dungeon;

/**
 * @author Ping GAO
 */
public class PickUpNoWay implements PickUpBehavior {

	@Override
	public void pickUp() {

	}

}
