package unsw.dungeon;

public interface getBombedBehavior {

}
